formControl class got added to text area field to make it responsive for all screen sizes and border for hour class got added in style.css for styling purpose

--- a/index.html
+++ b/index.html
@@ -31,73 +31,33 @@
     <div class="container">
       <!-- Timeblocks go here -->
   
-
-
-    <div class="row  mt-1">
-        <div class="col-12 text-block d-flex">
-            <div style="width: 10%;" class = "hour">9AM</div>
-            <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-            <div style="width: 10%;"><button class="saveBtn btn-lg h-100 w-100 fa fa-save" style="font-size:24px;"></button></div>
-        </div>
-    </div>
-
-    <div class="row mt-1">
-        <div class="col-12 text-block d-flex">
-            <div style="width: 10%;" class = "hour">10AM</div>
-            <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-            <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-        </div>
-    </div>
-
-    <div class="row mt-1">
-        <div class="col-12 text-block d-flex">
-            <div style="width: 10%;" class = "hour">11AM</div>
-            <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-            <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-        </div>
-    </div>
-    <div class="row mt-1">
+    
+    <div class="row  mb-2">
       <div class="col-12 text-block d-flex">
-          <div style="width: 10%;" class = "hour">12PM</div>
-          <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-          <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
+          <div style="width: 10%;" class = "hour">9AM</div>
+          <div style="width: 80%;" ><textarea class="form-control p-0 past" rows="3"></textarea></div>
+          <div style="width: 10%;"><button class="saveBtn btn-lg h-100 w-100 fa fa-save" style="font-size:24px; " title="Save"></button></div>
       </div>
   </div>
-  <div class="row mt-1">
+
+ 
+    <div class="row  mb-2">
+      <div class="col-12 text-block d-flex">
+          <div style="width: 10%;" class = "hour">9AM</div>
+          <div style="width: 80%;" ><textarea class="form-control p-0 present" rows="3"></textarea></div>
+          <div style="width: 10%;"><button class="saveBtn btn-lg h-100 w-100 fa fa-save" style="font-size:24px; " title="Save"></button></div>
+      </div>
+  </div>
+
+ 
+  <div class="row  mb-2">
     <div class="col-12 text-block d-flex">
-        <div style="width: 10%;" class = "hour">1PM</div>
-        <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-        <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
+        <div style="width: 10%;" class = "hour">9AM</div>
+        <div style="width: 80%;" ><textarea class="form-control p-0  future" rows="3"></textarea></div>
+        <div style="width: 10%;"><button class="saveBtn btn-lg h-100 w-100 fa fa-save" style="font-size:24px; " title="Save"></button></div>
     </div>
 </div>
-<div class="row mt-1">
-  <div class="col-12 text-block d-flex">
-      <div style="width: 10%;" class = "hour">2PM</div>
-      <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-      <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-  </div>
-</div>
-<div class="row mt-1">
-  <div class="col-12 text-block d-flex">
-      <div style="width: 10%;" class = "hour">3PM</div>
-      <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-      <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-  </div>
-</div>
-<div class="row mt-1">
-  <div class="col-12 text-block d-flex">
-      <div style="width: 10%;" class = "hour">4PM</div>
-      <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-      <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-  </div>
-</div>
-<div class="row mt-1">
-  <div class="col-12 text-block d-flex">
-      <div style="width: 10%;" class = "hour">5PM</div>
-      <div style="width: 80%;" class="textarea past"><textarea  name="" id="" cols="" rows="3"></textarea></div>
-      <div style="width: 10%;"><button class="saveBtn btn-lg h-100  w-100 fa fa-save" style="font-size:24px;"></button></div>
-  </div>
-</div>
+
 
 
    
